Fix spacing issue with tech list, start refactoring style of about page

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -3,33 +3,44 @@
 
 .About {
   display: flex;
+  flex-direction: column;
   border: 1px dashed green;
-  justify-content: space-around;
+  align-items: center;
+
 }
 
-#wrapper .text {
-  position:relative;
-  bottom:30px;
-  left:0px;
-  visibility:hidden;
-  }
+// #wrapper .text {
+//   position:relative;
+//   bottom:30px;
+//   left:0px;
+//   visibility:hidden;
+//   }
   
-  #wrapper:hover .text {
-    visibility:visible;
-  }
+//   #wrapper:hover .text {
+//     visibility:visible;
+//   }
 
   .about-ul {
    list-style: none;
-   width: 15%;
    font-size: .8em;
+   display: flex;
+   flex-wrap: wrap;
   }
 
   .about-li {
     color: $lighter-grey;
-    margin-top: .8vh;
+    margin-left: 1%;
+    margin-right: 1%;
   }
 
+  .about-li-span {
+    // margin-right: 1%;
+  }
 
+.about-section-general {
+  padding-top: 3%;
+  width: 40%;
+}
 
   .about-dropdown {
     border: 1px solid blue;
@@ -40,24 +51,22 @@
   .about-div-dropdown {
     width: 100%;
     border: 1px dotted pink;
-    opacity: .5
+    opacity: .7;
   }
 
 
-  .about-div-techlist {
-    width: 100%
-  }
+.about-div-techlist {
+  width: 100%
+}
 
 
 .about-section-tech {
   display: flex;
-  width: 20%
+  width: 100%
 }
 
-.css-yk16xz-control {
-  background-color: black;
-}
-
-p {
+.about-p {
   color: $lighter-grey;
+  font-weight: 300;
 }
+
